API v2 POST `/components` to create component (#1354)
